--- a/html-source/reservation.html
+++ b/html-source/reservation.html
@@ -7,20 +7,9 @@
 	<title>My nice page</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-	<style>
-		.my-footer {
-			height: 5em;
-			background-color: #163b65;
-			margin-top: 1.5em;
-			padding: 1em;
-			color: #ffffff;
-			font-size: 80%;
-		}
-
-		.room-image {
-			width: 50%;
-		}
-	</style>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.3.4/dist/css/datepicker.min.css">
+	<link rel="stylesheet" type="text/css" href="https://unpkg.com/notie/dist/notie.min.css">
+	<link rel="stylesheet" type="text/css" href="static/css/styles.css">
 </head>
 
 <body>
@@ -64,34 +53,61 @@
 		<div class="row">
 			<div class="col-md-3"></div>
 			<div class="col-md-6">
-				<h1 class="text-center mt-5">Search for Availability</h1>
+				<h1 class="text-center mt-5 mb-3">Search for Availability</h1>
 
-				<form action="reservation.html" method="get">
-					<div class="row mb-3">
+				<form action="reservation.html" method="get" novalidate class="needs-validation">
+<!--					<div class="row mb-3" id="reservation_dates">-->
+<!--						<div class="col">-->
+<!--							<div class="form-group">-->
+<!--								<label for="start_date" class="form-label">Starting Date</label>-->
+<!--								<input id="start_date" required type="date" class="form-control" placeholder="Arrival Date">-->
+<!--&lt;!&ndash;								<div id="startDateHelp" class="form-text">Enter your starting date in the form of&ndash;&gt;-->
+<!--&lt;!&ndash;									YYYY-MM-DD.</div>&ndash;&gt;-->
+<!--								<div class="valid-feedback">-->
+<!--									Looks good!-->
+<!--								</div>-->
+<!--							</div>-->
+<!--						</div>-->
+
+<!--						<div class="col">-->
+<!--							<div class="form-group">-->
+<!--								<label for="end_date" class="form-label">Ending Date</label>-->
+<!--								<input required type="date" class="form-control" id="end_date" name="end_date"-->
+<!--									aria-describedby="endDateHelp">-->
+<!--								<div id="endDateHelp" class="form-text">Enter your ending date in the form of-->
+<!--									YYYY-MM-DD.-->
+<!--								</div>-->
+<!--							</div>-->
+<!--						</div>-->
+<!--					</div>-->
+
+					<div class="row mb-3" id="foo">
 						<div class="col">
-							<div class="form-group">
-								<label for="start_date" class="form-label">Starting Date</label>
-								<input required type="date" class="form-control" id="start_date" name="start_date"
-									aria-describedby="startDateHelp">
-								<div id="startDateHelp" class="form-text">Enter your starting date in the form of
-									YYYY-MM-DD.</div>
-							</div>
+							<label for="start_date" class="form-label">Arrival</label>
+							<input class="form-control" id="start_date" type="text" name="start" required placeholder="dd-mm-YYYY" autocomplete="off">
+						</div>
+						<div class="col">
+							<label for="end_date" class="form-label">Departure</label>
+							<input class="form-control" id="end_date" type="text" name="end" required placeholder="dd-mm-YYYY" autocomplete="off">
 						</div>
 
-						<div class="col">
-							<div class="form-group">
-								<label for="end_date" class="form-label">Ending Date</label>
-								<input required type="date" class="form-control" id="end_date" name="end_date"
-									aria-describedby="endDateHelp">
-								<div id="endDateHelp" class="form-text">Enter your ending date in the form of
-									YYYY-MM-DD.
-								</div>
-							</div>
-						</div>
 					</div>
+
+					<hr>
 
 					<button type="submit" class="btn btn-primary">Search Availability</button>
 				</form>
+
+			</div>
+		</div>
+		<div class="row">
+			<div class="col">
+				<p id="myParagraph">This is some text</p>
+				<p>
+					<button id="colorButton" class="btn btn-outline-secondary">
+						Click me
+					</button>
+				</p>
 			</div>
 		</div>
 	</div>
@@ -109,6 +125,168 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
 		crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.3.4/dist/js/datepicker-full.min.js"></script>
+	<script src="https://unpkg.com/notie"></script>
+	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+	<script>
+		let alert = Prompt();
+		// Example starter JavaScript for disabling form submissions if there are invalid fields
+		(() => {
+			'use strict'
+
+			// Fetch all the forms we want to apply custom Bootstrap validation styles to
+			const forms = document.querySelectorAll('.needs-validation')
+
+			// Loop over them and prevent submission
+			Array.from(forms).forEach(form => {
+				form.addEventListener('submit', event => {
+					if (!form.checkValidity()) {
+						event.preventDefault()
+						event.stopPropagation()
+					}
+
+					form.classList.add('was-validated')
+				}, false)
+			})
+		})()
+
+		document.getElementById("colorButton").addEventListener("click", function () {
+			let html = `
+			<form id="check-availability-form" action="" method="post" novalidate class="needs-validation">
+				<div class="row">
+					<div class="col">
+						<div class="row" id="reservation-dates-modal">
+							<div class="col">
+								<input disabled required class="form-control" type="text" name="start" id="start" placeholder="Arrival" autocomplete="off">
+							</div>
+							<div class="col">
+								<input disabled required class="form-control" type="text" name="end" id="end" placeholder="Departure" autocomplete="off">
+							</div>
+						</div>
+					</div>
+				</div>
+			</form>
+			`
+			alert.custom({msg: html, title: "Choose your dates"})
+		})
+
+		const elem = document.getElementById('foo');
+		const rangepicker = new DateRangePicker(elem, {
+			format: "dd-mm-yyyy"
+		});
+
+		function notify(msg, msgType) {
+			notie.alert({
+				type: msgType,
+				text: msg
+			})
+		}
+
+		function notifyModal(title, text, icon, confirmButtonText) {
+			Swal.fire({
+				title: title,
+				html: text,
+				icon: icon,
+				confirmButtonText: confirmButtonText
+			})
+		}
+
+		function Prompt() {
+			const toast = function (c) {
+				const {
+					msg = "",
+					icon = "success",
+					position = "top-end"
+				} = c;
+				const Toast = Swal.mixin({
+					toast: true,
+					title: msg,
+					position: position,
+					icon: icon,
+					showConfirmButton: false,
+					timer: 3000,
+					timerProgressBar: true,
+					didOpen: (toast) => {
+						toast.addEventListener('mouseenter', Swal.stopTimer)
+						toast.addEventListener('mouseleave', Swal.resumeTimer)
+					}
+				})
+
+				Toast.fire({})
+			}
+			const success = function (c) {
+				const {
+					msg = "",
+					title = "",
+					footer = "",
+				} = c;
+				Swal.fire({
+					icon: 'success',
+					title: title,
+					text: msg,
+					footer: footer
+				})
+			}
+			const error = function (c) {
+				const {
+					msg = "",
+					title = "",
+					footer = "",
+				} = c;
+				Swal.fire({
+					icon: 'error',
+					title: title,
+					text: msg,
+					footer: footer
+				})
+			}
+
+			const custom = async function(c) {
+				const {
+					msg = "",
+					title = "",
+				} = c;
+
+				const { value: formValues } = await Swal.fire({
+					title: title,
+					html: msg,
+					backdrop: false,
+					showCancelButton: true,
+					willOpen: () => {
+						const elem = document.getElementById('reservation-dates-modal')
+						const rp = new DateRangePicker(elem, {
+							format: 'dd-mm-yyyy',
+							showOnFocus: true,
+						})
+					},
+					focusConfirm: false,
+					preConfirm: () => {
+						return [
+							document.getElementById('start').value,
+							document.getElementById('end').value
+						]
+					},
+					didOpen: () => {
+						document.getElementById('start').removeAttribute('disabled');
+						document.getElementById('end').removeAttribute('disabled')
+					}
+				})
+
+				if (formValues) {
+					Swal.fire(JSON.stringify(formValues))
+				}
+
+			}
+
+			return {
+				toast: toast,
+				success: success,
+				error: error,
+				custom: custom
+			}
+		}
+	</script>
 </body>
 
 </html>
