--- a/html-source/contact.html
+++ b/html-source/contact.html
@@ -6,21 +6,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>My nice page</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-	<style>
-		.my-footer {
-			height: 5em;
-			background-color: #163b65;
-			margin-top: 1.5em;
-			padding: 1em;
-			color: #ffffff;
-			font-size: 80%;
-		}
-
-		.room-image {
-			width: 50%;
-		}
-	</style>
+		  integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.3.4/dist/css/datepicker.min.css">
+	<link rel="stylesheet" type="text/css" href="https://unpkg.com/notie/dist/notie.min.css">
+	<link rel="stylesheet" type="text/css" href="static/css/styles.css">
 </head>
 
 <body>
