--- a/html-source/reservation.html
+++ b/html-source/reservation.html
@@ -9,7 +9,7 @@
 		integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.3.4/dist/css/datepicker.min.css">
 	<link rel="stylesheet" type="text/css" href="https://unpkg.com/notie/dist/notie.min.css">
-	<link rel="stylesheet" type="text/css" href="static/css/styles.css">
+	<link rel="stylesheet" type="text/css" href="../static/css/styles.css">
 </head>
 
 <body>
@@ -56,31 +56,6 @@
 				<h1 class="text-center mt-5 mb-3">Search for Availability</h1>
 
 				<form action="reservation.html" method="get" novalidate class="needs-validation">
-<!--					<div class="row mb-3" id="reservation_dates">-->
-<!--						<div class="col">-->
-<!--							<div class="form-group">-->
-<!--								<label for="start_date" class="form-label">Starting Date</label>-->
-<!--								<input id="start_date" required type="date" class="form-control" placeholder="Arrival Date">-->
-<!--&lt;!&ndash;								<div id="startDateHelp" class="form-text">Enter your starting date in the form of&ndash;&gt;-->
-<!--&lt;!&ndash;									YYYY-MM-DD.</div>&ndash;&gt;-->
-<!--								<div class="valid-feedback">-->
-<!--									Looks good!-->
-<!--								</div>-->
-<!--							</div>-->
-<!--						</div>-->
-
-<!--						<div class="col">-->
-<!--							<div class="form-group">-->
-<!--								<label for="end_date" class="form-label">Ending Date</label>-->
-<!--								<input required type="date" class="form-control" id="end_date" name="end_date"-->
-<!--									aria-describedby="endDateHelp">-->
-<!--								<div id="endDateHelp" class="form-text">Enter your ending date in the form of-->
-<!--									YYYY-MM-DD.-->
-<!--								</div>-->
-<!--							</div>-->
-<!--						</div>-->
-<!--					</div>-->
-
 					<div class="row mb-3" id="foo">
 						<div class="col">
 							<label for="start_date" class="form-label">Arrival</label>
@@ -98,16 +73,6 @@
 					<button type="submit" class="btn btn-primary">Search Availability</button>
 				</form>
 
-			</div>
-		</div>
-		<div class="row">
-			<div class="col">
-				<p id="myParagraph">This is some text</p>
-				<p>
-					<button id="colorButton" class="btn btn-outline-secondary">
-						Click me
-					</button>
-				</p>
 			</div>
 		</div>
 	</div>
